--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -163,6 +163,7 @@ p {
     border: 2px solid #0a54f5;
     color: #0a54f5;
     background-color: #ffffff;
+    cursor: pointer;
 }
 
 .end-message{
